<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/headLineText"
        android:text="@string/twitter_count"
        android:layout_marginTop="15dp"
        android:textColor="@color/new_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/arrowBack"
        app:srcCompat="@drawable/arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        android:id="@+id/imageDivider"
        app:layout_constraintTop_toBottomOf="@+id/arrowBack"
        android:background="@color/light_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <ImageView
        android:id="@+id/imageLogo"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/twitter_logo"
        app:layout_constraintTop_toBottomOf="@+id/imageDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardCharacterTyped"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cardCharacterRemaining"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/imageLogo"
        android:layout_width="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:minHeight="110dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/typedCharacters"
                android:textColor="@color/new_black"
                android:text="@string/charactersType"
                android:gravity="center"
                android:background="@drawable/image_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="0/280"
                android:textColor="@color/black"
                android:id="@+id/writtenCharcters"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typedCharacters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardCharacterRemaining"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/cardCharacterTyped"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/imageLogo"
        android:layout_width="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:minHeight="110dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/headerCharacter"
                android:textColor="@color/new_black"
                android:text="@string/characters_remaining"
                android:gravity="center"
                android:background="@drawable/image_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="280"
                android:textColor="@color/black"
                android:id="@+id/remainingText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        app:layout_constraintTop_toBottomOf="@+id/cardCharacterRemaining"
        android:layout_width="match_parent"
        android:id="@+id/containerTextInput"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editTextInput"
            android:paddingTop="5dp"
            android:paddingHorizontal="5dp"
            android:gravity="top"
            android:hint="@string/hint_text"
            android:minHeight="239dp"
            android:inputType="textMultiLine"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.button.MaterialButton
        app:cornerRadius="12dp"
        android:layout_marginTop="20dp"
        android:id="@+id/copyText"
        android:textAllCaps="false"
        android:text="@string/copy_text"
        app:layout_constraintStart_toStartOf="@+id/containerTextInput"
        app:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/containerTextInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        app:cornerRadius="12dp"
        android:id="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="@+id/containerTextInput"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:text="@string/clear"
        app:backgroundTint="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/containerTextInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        app:cornerRadius="16dp"
        android:id="@+id/postTweet"
        app:layout_constraintStart_toStartOf="@+id/containerTextInput"
        app:layout_constraintEnd_toEndOf="@+id/containerTextInput"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:minHeight="56dp"
        android:text="@string/post_tweet"
        app:backgroundTint="@color/sky_color"
        app:layout_constraintTop_toBottomOf="@+id/clearButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/progressLoader"
        style="@style/AVLoadingIndicatorView.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:indicatorColor="@color/black"
        app:indicatorName="BallScaleMultipleIndicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>